added hover transition on cards

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     <div>
       <h1 class="text-3xl p-4">Inspiration for your first order</h1>
-      <div class="flex flex-nowrap overflow-x-auto mx-10">
+      <div class="flex flex-nowrap overflow-x-scroll mx-10">
         <img
           src="https://source.unsplash.com/a66sGfOnnqQ"
           class="object-contain h-52 w-full p-1 rounded-2xl"
@@ -198,20 +198,22 @@
 
     <div class="flex flex-wrap my-4 mx-6">
       <h1 class="text-3xl p-4 w-full">Best Food to order</h1>
-      <div class="p-2 w-1/3 hover:shadow-2xl">
+      <div class="p-2 w-1/3">
         <div
           class="
             h-full
             border-2 border-gray-200 border-opacity-60
             rounded-lg
             overflow-hidden
+            hover:shadow-2xl
+            hover:bg-gray-100
           "
         >
           <img
             src="https://source.unsplash.com/XNzYljXGsw4"
             class="h-56 w-full object-cover object-center"
           />
-          <div class="p-1">
+          <div class="p-3">
             <h1 class="text-2xl font-semibold mb-1">Curry with rice</h1>
 
             <p class="text-gray-500 text-xl">Rs. 400 for one platter</p>
@@ -219,20 +221,22 @@
         </div>
       </div>
 
-      <div class="p-2 w-1/3 hover:shadow-2xl">
+      <div class="p-2 w-1/3">
         <div
           class="
             h-full
             border-2 border-gray-200 border-opacity-60
             rounded-lg
             overflow-hidden
+            hover:shadow-2xl
+            hover:bg-gray-100
           "
         >
           <img
             src="https://source.unsplash.com/M-yrBvxj4lM"
             class="h-56 w-full object-cover object-center"
           />
-          <div class="p-1">
+          <div class="p-3">
             <h1 class="text-2xl font-semibold mb-1">Indian Snack</h1>
 
             <p class="text-xl text-gray-500">Rs. 250 for one platter</p>
@@ -240,80 +244,88 @@
         </div>
       </div>
 
-      <div class="p-2 w-1/3 hover:shadow-2xl">
+      <div class="p-2 w-1/3">
         <div
           class="
             h-full
             border-2 border-gray-200 border-opacity-60
             rounded-lg
             overflow-hidden
+            hover:shadow-2xl
+            hover:bg-gray-100
           "
         >
           <img
             src="https://source.unsplash.com/1keEJmqm8vU"
             class="w-full h-56 object-cover object-center"
           />
-          <div class="p-1">
+          <div class="p-3">
             <h1 class="text-2xl font-semibold mb-1">Biryani</h1>
             <p></p>
             <p class="text-xl text-gray-500">Rs. 300 for one platter</p>
           </div>
         </div>
       </div>
-      <div class="p-2 w-1/3 hover:shadow-2xl">
+      <div class="p-2 w-1/3">
         <div
           class="
             h-full
             border-2 border-gray-200 border-opacity-60
             rounded-lg
             overflow-hidden
+            hover:shadow-2xl
+            hover:bg-gray-100
           "
         >
           <img
             src="https://source.unsplash.com/pe9dvM1rQkM"
             class="w-full h-56 object-cover object-center"
           />
-          <div class="p-1">
+          <div class="p-3">
             <h1 class="text-2xl font-semibold mb-1">Steak and fries</h1>
             <p></p>
             <p class="text-xl text-gray-500">Rs. 700 for one platter</p>
           </div>
         </div>
       </div>
-      <div class="p-2 w-1/3 hover:shadow-2xl">
+      <div class="p-2 w-1/3">
         <div
           class="
             h-full
             border-2 border-gray-200 border-opacity-60
             rounded-lg
             overflow-hidden
+            hover:shadow-2xl
+            hover:bg-gray-100
           "
         >
           <img
             src="https://source.unsplash.com/IGfIGP5ONV0"
             class="w-full h-56 object-cover object-center"
           />
-          <div class="p-1">
+          <div class="p-3">
             <h1 class="text-2xl font-semibold mb-1">Salad</h1>
             <p></p>
             <p class="text-xl text-gray-500">Rs. 500 for one platter</p>
           </div>
         </div>
       </div>
-      <div class="p-2 w-1/3 hover:shadow-2xl">
+      <div class="p-2 w-1/3">
         <div
           class="
             h-full
             border-2 border-gray-200 border-opacity-60
             rounded-lg
             overflow-hidden
+            hover:shadow-2xl
+            hover:bg-gray-100
           "
         >
           <img
             src="https://source.unsplash.com/xmuIgjuQG0M"
             class="w-full h-56 object-cover object-center"
           />
-          <div class="p-1">
+          <div class="p-3">
             <h1 class="text-2xl font-semibold mb-1">Rice and beans</h1>
             <p></p>
             <p class="text-xl text-gray-500">Rs. 100 for one platter</p>
@@ -354,11 +366,11 @@
       </div>
     </div>
 
-    <div>
-      <h1 class="text-2xl font-bold w-full p-4">About Us</h1>
-      <div class="flex justify-around">
-        <div class="flex flex-col ml-3">
-          <h2 class="text-xl">Company</h2>
+    <div class="container">
+      <h1 class="text-3xl w-full p-4 m-4">About Us</h1>
+      <div class="flex justify-evenly flex-nowrap text-gray-700 mx-4">
+        <div class="flex flex-col">
+          <h2 class="text-xl text-gray-900">Company</h2>
           <ul>
             <li><a href="#">who we are</a></li>
             <li><a href="#">Blog</a></li>
@@ -368,9 +380,8 @@
             <li><a href="#">Financial Information</a></li>
           </ul>
         </div>
-
         <div class="flex flex-col">
-          <h1 class="text-xl">For Foodies</h1>
+          <h1 class="text-xl text-gray-900">For Foodies</h1>
           <ul>
             <li><a href="#">Code of Conduct</a></li>
             <li><a href="#">Community</a></li>
@@ -379,7 +390,7 @@
           </ul>
         </div>
         <div class="flex flex-col">
-          <h1 class="text-xl">For Restaurant</h1>
+          <h1 class="text-xl text-gray-900">For Restaurant</h1>
           <ul>
             <li><a href="#">Add Restaurant</a></li>
             <li><a href="#">Claim your Listing</a></li>
@@ -389,7 +400,7 @@
           </ul>
         </div>
         <div class="flex flex-col">
-          <h1 class="text-xl">For you</h1>
+          <h1 class="text-xl text-gray-900">For you</h1>
           <ul>
             <li><a href="#">Privacy</a></li>
             <li><a href="#">Terms</a></li>
